<resources>
    <string name="app_name">myDiabetes</string>
    <string name="add">Add</string>
    <string name="settings">Settings</string>
    <string name="home_page">Homepage</string>
    <string name="pieces_shortcut">pcs.</string>
    <string name="meat">Meat</string>
    <string name="fish">Fish</string>
    <string name="dairy">Dairy</string>
    <string name="bread">Bread</string>
    <string name="vegetables_and_fruits">Vegetables and fruits</string>
    <string name="sweets_and_snacks">Sweets and snacks</string>
    <string name="drinks">Drinks</string>
    <string name="nuts">Nuts</string>
    <string name="others">Others</string>
    <string name="empty_field_message_error">The field cannot be empty!</string>
    <string name="correct_weight_icon_message">This is the target weight, the values below will be calculated for this weight.</string>
    <string name="correct_pieces_icon_message">This is the target amount, the values given below will be calculated for this amount.</string>
    <string name="for_smth">for</string>
    <string name="for_product">of the product</string>
    <string name="pie_label_carbohydrate">Carbohydrate ex.</string>
    <string name="pie_label_protein_fat">Protein-fat ex.</string>
    <string name="tag_management">Tag management</string>
    <string name="rejected">Rejected.</string>
    <string name="removed_exclamation_mark">Removed!</string>
    <string name="calories_value">Calories</string>
    <string name="value_calculation">Value calculation</string>
    <string name="all">All</string>
    <string name="product_added">Product added</string>
    <string name="set_the_tag">Set the tag</string>
    <string name="barcode_manually">Enter the barcode manually</string>
    <string name="barcode_exists_error_message">There is already a product with such a barcode!</string>
    <string name="product_name_exists_error_message">A product with that name already exists!</string>
    <string name="add_tag">Add a tag</string>
    <string name="lack_product">Lack of product : (</string>
    <string name="enter_product_name_to_find">Enter the product name to find it</string>
    <string name="or">or</string>
    <string name="scan_barcode">Scan the barcode</string>
    <string name="search_by_barcode_error_message">There is no such product with such a barcode!</string>
    <string name="new_tag">New Tag</string>
    <string name="tag_name">Tag name</string>
    <string name="new_tag_layout_message">The tag name will serve as a product container that will be visible on the home page.</string>
    <string name="editing_product_name">Editing the product name</string>
    <string name="product_name">Product name</string>
    <string name="editing_product_name_layout_message">The product name should match the actual product name. This will avoid search problems.</string>
    <string name="rename">Rename</string>
    <string name="food_plate_label">Your plate</string>
    <string name="calculate">Calculate</string>
    <string name="polish">Polish</string>
    <string name="english">English</string>
    <string name="lang">Language</string>
    <string name="values">Values</string>
    <string name="carbohydrates">Carbohydrates</string>
    <string name="protein">Protein</string>
    <string name="fat">Fat</string>
    <string name="calories">Calories</string>
    <string name="exchangers">Exchangers</string>
    <string name="add_picture">Add picture</string>
    <string name="barcode">Barcode</string>
    <string name="product_barcode">Product barcode</string>
    <string name="barcode_layout_message">The barcode can be found on the packaging. The code is below the bars.</string>
    <string name="save">Save</string>
    <string name="set_name">Set the product name</string>
    <string name="save_for">Save for:</string>
    <string name="dark_mode">Dark mode</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="confirm_del">Confirm deletion</string>
    <string name="del_confirm_message">Are you sure you want to remove the product? You can\'t take it back.</string>
    <string name="del">Delete</string>
    <string name="go_back">Go back</string>
    <string name="del_tag_confirm_message">Products assigned to this tag will be untagged and can be found under \'All\' or by searching.</string>
    <string name="download">Downloading products</string>
    <string name="manage_photo">Manage photo</string>
    <string name="set_icon">Set as product icon</string>
    <string name="manage_product_tag">Manage your product tag</string>
    <string name="manage_tag_confirm_message">Choose what you want to do with the tag. Remember removing a product tag will remove the product from the tag section.</string>
    <string name="change">Change</string>
    <string name="r_meal">Your meal</string>
    <string name="clear_plate">Clear the plate</string>
    <string name="weight">Weight</string>
    <string name="w_p">Weight / Pieces</string>
    <string name="pf_c">Protein and Fat / Calories</string>
    <string name="measure">Measure</string>
    <string name="correct_weight">Correct weight</string>
    <string name="quantity">Quantity</string>
    <string name="piece">Piece</string>
    <string name="meals">Meals</string>
    <string name="products">Products</string>
    <string name="del_meal_confimr_message">Are you sure you want to remove the meal? You can\'t take it back.</string>
    <string name="meal_name">Meal name</string>
    <string name="editing_meal_name_message">The meal name should match the actual product name. This will avoid search problems.</string>
    <string name="editing_meal_name">Editing the meal name</string>
    <string name="delete_product_in_meal_message">The product cannot be deleted because it is in a saved meal.</string>
    <string name="share">Share</string>
    <string name="more_options">More options</string>
    <string name="confirm_sending">Confirm sending</string>
    <string name="share_message">If you intend to share several products / meals, do it from the position you find by going to the settings -> share many</string>
    <string name="share_many">Share many</string>
    <string name="report">Report</string>
    <string name="photos">Photos</string>
    <string name="invalid_name">Invalid name</string>
    <string name="value_mismatch">Value mismatch</string>
    <string name="invalid_tag">Invalid tag</string>
    <string name="photos_mismatch">Photos mismatch</string>
    <string name="report_error_message">The content of the application has not been selected!</string>
    <string name="meal_name_exist_error_message">A meal with that name already exists!</string>
    <string name="tag_name_exists_error_message">A tag with that name already exists!</string>
    <string name="sent">Sent!</string>
</resources>