<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_nav"
        android:contentDescription="@string/home_page"
        android:enabled="true"
        android:icon="@drawable/ic_round_dashboard"
        android:title="@string/home_page" />
    <item
        android:id="@+id/add_nav"
        android:contentDescription="@string/add"
        android:enabled="true"
        android:icon="@drawable/ic_round_add_box"
        android:title="@string/add" />
    <item
        android:id="@+id/meals_nav"
        android:contentDescription="@string/meals"
        android:enabled="true"
        android:icon="@drawable/ic_round_lunch_dining"
        android:title="@string/meals" />
    <item
        android:id="@+id/settings_nav"
        android:contentDescription="@string/settings"
        android:enabled="true"
        android:icon="@drawable/ic_round_settings_applications"
        android:title="@string/settings" />
</menu>