<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_above="@+id/calculateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_alignParentTop="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="15dp"
                    android:paddingBottom="0dp"
                    android:orientation="vertical">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp">
                        <TextView
                            android:id="@+id/typeOfTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:text="@string/weight"
                            android:textSize="24sp"
                            android:textStyle="bold"/>
                        <com.google.android.material.switchmaterial.SwitchMaterial
                            android:id="@+id/measureSwitch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:text="@string/w_p"/>
                    </RelativeLayout>

                    <LinearLayout
                        android:id="@+id/weightContainer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:orientation="horizontal"
                        android:baselineAligned="false">
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/weightTextInputLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:layout_marginEnd="5dp"
                            app:errorEnabled="true"
                            app:suffixText="g/ml"
                            android:hint="@string/weight"
                            style="@style/CustomInputLayout.OutlineBox">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/weightTextInput"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="numberDecimal"
                                android:imeOptions="actionNext"
                                android:maxLength="3"
                                />

                        </com.google.android.material.textfield.TextInputLayout>
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/correctWeightTextInputLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:layout_marginStart="5dp"
                            app:errorEnabled="true"
                            app:endIconMode="custom"
                            app:endIconDrawable="@drawable/ic_round_help_center"
                            app:endIconContentDescription="helpIcon"
                            app:suffixText="g/ml"
                            android:hint="@string/correct_weight"
                            style="@style/CustomInputLayout.OutlineBox">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/correctWeightTextInput"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="numberDecimal"
                                android:imeOptions="actionNext"
                                android:maxLength="3"
                                />

                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>
                    <LinearLayout
                        android:visibility="gone"
                        android:id="@+id/pieceContainer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:orientation="horizontal"
                        android:baselineAligned="false">
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/pieceTextInputLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:layout_marginEnd="5dp"
                            app:errorEnabled="true"
                            app:suffixText="@string/pieces_shortcut"
                            android:hint="@string/piece"
                            style="@style/CustomInputLayout.OutlineBox">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/pieceTextInput"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="number"
                                android:imeOptions="actionNext"
                                android:maxLength="3"
                                />

                        </com.google.android.material.textfield.TextInputLayout>
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/correctPieceTextInputLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:layout_marginStart="5dp"
                            app:errorEnabled="true"
                            app:endIconMode="custom"
                            app:endIconDrawable="@drawable/ic_round_help_center"
                            app:endIconContentDescription="helpIcon"
                            app:suffixText="@string/pieces_shortcut"
                            android:hint="@string/quantity"
                            style="@style/CustomInputLayout.OutlineBox">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/correctPieceTextInput"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="number"
                                android:imeOptions="actionNext"
                                android:maxLength="3"
                                />

                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentStart="true"
                                android:layout_centerVertical="true"
                                android:text="@string/values"
                                android:textSize="24sp"
                                android:textStyle="bold"/>
                            <com.google.android.material.switchmaterial.SwitchMaterial
                                android:id="@+id/valuesSwitch"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:layout_centerVertical="true"
                                android:text="@string/pf_c"/>
                        </RelativeLayout>
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/carbohydrateTextInputLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:errorEnabled="true"
                            android:hint="@string/carbohydrates"
                            style="@style/CustomInputLayout.OutlineBox">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/carbohydrateTextInput"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="numberDecimal"
                                android:imeOptions="actionNext"
                                android:maxLength="6"
                                />

                        </com.google.android.material.textfield.TextInputLayout>
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/proteinTextInputLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:errorEnabled="true"
                            android:hint="@string/protein"
                            style="@style/CustomInputLayout.OutlineBox">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/proteinTextInput"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="numberDecimal"
                                android:imeOptions="actionNext"
                                android:maxLength="6"
                                />

                        </com.google.android.material.textfield.TextInputLayout>
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/fatTextInputLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:errorEnabled="true"
                            android:hint="@string/fat"
                            style="@style/CustomInputLayout.OutlineBox">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/fatTextInput"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="numberDecimal"
                                android:imeOptions="actionDone"
                                android:maxLength="6"
                                />

                        </com.google.android.material.textfield.TextInputLayout>
                        <com.google.android.material.textfield.TextInputLayout
                            android:visibility="gone"
                            android:id="@+id/caloriesTextInputLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:errorEnabled="true"
                            android:hint="@string/calories"
                            style="@style/CustomInputLayout.OutlineBox">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/caloriesTextInput"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="numberDecimal"
                                android:imeOptions="actionDone"
                                android:maxLength="6"
                                />

                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </LinearLayout>

        <com.google.android.material.circularreveal.cardview.CircularRevealCardView
            android:id="@+id/calculateButton"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="76dp"
            android:layout_alignParentBottom="true"
            app:cardBackgroundColor="@color/green">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:text="@string/calculate"
                android:textSize="18sp"
                android:textStyle="bold"/>
        </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>