<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_view_background_rounded">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="30dp"
            app:cardBackgroundColor="@color/independent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mealNameTextInputLayout"
            style="@style/CustomInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/meal_name"
            app:counterEnabled="true"
            app:counterMaxLength="25"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mealNameTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:lines="1"
                android:maxLength="25"
                android:textCursorDrawable="@drawable/black_cursor"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editing_meal_name_message"
            android:textSize="14sp" />

        <com.google.android.material.circularreveal.cardview.CircularRevealCardView
            android:id="@+id/saveNameButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="15dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/green">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:text="@string/save"
                android:textSize="18sp"
                android:textStyle="bold" />
        </com.google.android.material.circularreveal.cardview.CircularRevealCardView>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>